Fix issue with Select component label wrapping

--- a/packages/css-framework/src/components/_select.scss
+++ b/packages/css-framework/src/components/_select.scss
@@ -92,6 +92,7 @@
     pointer-events: none;
     color: color(neutral, 300);
     font-size: font-size(s);
+    white-space: nowrap;
   }
 
   .rn-select__badge {
